examples/production/durable_postgres_k8s/components/otel/collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app.kubernetes.io/name: otel-collector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: prom
      port: 8889
      targetPort: prom
